# vsratostat

./: .gitignore  CMakeLists.txt  LICENSE  platformio.ini
data/: index.html  index.js
src/: config.h  defines.h  main.cpp
src/config/: Config.h  ConfigEntity.h  ConfigMgr.cpp  ConfigMgr.h
src/ha/: DiscoveryMgr.cpp  DiscoveryMgr.h
src/ha/entity/: Base.cpp  Base.h  BinarySensor.cpp  BinarySensor.h  Button.cpp  Button.h  Climate.cpp  Climate.h  Device.cpp  Device.h  Sensor.cpp  Sensor.h  WaterHeater.cpp  WaterHeater.h
src/ha/enum/: DeviceClass.h  EntityCategory.h
src/mqtt/: Consumer.h  MQTT.cpp  MQTT.h  Producer.h
src/thermostat/: Boiler.cpp  Boiler.h  BoilerConstant.h  BoilerState.cpp  boiler_state.cpp  boiler_state.h
src/thermostat/mqtt/consumer/: CommandConsumer.cpp  CommandConsumer.h  command_consumer.cpp  command_consumer.h
src/thermostat/mqtt/entity/: CommandEntity.cpp  CommandEntity.h  StateEntity.cpp  StateEntity.h  command_entity.cpp  state_entity.cpp  state_entity.h
src/thermostat/mqtt/producer/: StateProducer.cpp  StateProducer.h  state_producer.cpp  state_producer.h
src/utils/: Json.cpp  Json.h  String.h  Utils.cpp  Utils.h
src/web/: Handler.cpp  Handler.h
src/wifi/: WiFiMgr.cpp  WiFiMgr.h  wifi_mgr.cpp  wifi_mgr.h
